# packages/api/src/swagger/docs.json
@@ -22,10 +22,10 @@
         }
       }
     },
-    "/users/": {
-      "post": {
+    "/areas/": {
+      "get": {
         "tags": [
-          "Users"
+          "Areas"
         ],
         "description": "",
         "responses": {
@@ -34,23 +34,57 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/schemas/CreateUserResponse"
+                  "$ref": "#/schemas/AreaResponse"
                 }
               }
             }
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      },
+      "post": {
+        "tags": [
+          "Areas"
+        ],
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/schemas/AreaResponse"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
         "requestBody": {
-          "in": "body",
+          "required": true,
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/schemas/CreateUserRequest"
+                "$ref": "#/schemas/CreateAreaRequest"
               }
             },
             "application/xml": {
               "schema": {
-                "$ref": "#/schemas/CreateUserRequest"
+                "$ref": "#/schemas/CreateAreaRequest"
               }
             }
           }
@@ -108,6 +142,202 @@
     }
   },
   "schemas": {
+    "AreaId": {
+      "description": "Identifier type for public.areas",
+      "allOf": [
+        {
+          "type": "object",
+          "properties": {
+            "__brand": {
+              "type": "string",
+              "const": "AreasId"
+            }
+          },
+          "required": [
+            "__brand"
+          ]
+        },
+        {
+          "type": "string"
+        }
+      ]
+    },
+    "Area": {
+      "description": "Represents the table public.areas",
+      "type": "object",
+      "properties": {
+        "id": {
+          "description": "Identifier type for public.areas",
+          "allOf": [
+            {
+              "type": "object",
+              "properties": {
+                "__brand": {
+                  "type": "string",
+                  "const": "AreasId"
+                }
+              },
+              "required": [
+                "__brand"
+              ]
+            },
+            {
+              "type": "string"
+            }
+          ]
+        },
+        "name": {
+          "type": "string"
+        },
+        "created_at": {
+          "type": "string",
+          "format": "date-time"
+        },
+        "updated_at": {
+          "type": "string",
+          "format": "date-time"
+        }
+      },
+      "required": [
+        "created_at",
+        "id",
+        "name",
+        "updated_at"
+      ]
+    },
+    "AreasInitializer": {
+      "description": "Represents the initializer for the table public.areas",
+      "type": "object",
+      "properties": {
+        "id": {
+          "description": "Default value: gen_random_uuid()",
+          "allOf": [
+            {
+              "type": "object",
+              "properties": {
+                "__brand": {
+                  "type": "string",
+                  "const": "AreasId"
+                }
+              },
+              "required": [
+                "__brand"
+              ]
+            },
+            {
+              "type": "string"
+            }
+          ]
+        },
+        "name": {
+          "type": "string"
+        },
+        "created_at": {
+          "description": "Default value: CURRENT_TIMESTAMP",
+          "type": "string",
+          "format": "date-time"
+        },
+        "updated_at": {
+          "description": "Default value: CURRENT_TIMESTAMP",
+          "type": "string",
+          "format": "date-time"
+        }
+      },
+      "required": [
+        "name"
+      ]
+    },
+    "AreasMutator": {
+      "description": "Represents the mutator for the table public.areas",
+      "type": "object",
+      "properties": {
+        "id": {
+          "description": "Identifier type for public.areas",
+          "allOf": [
+            {
+              "type": "object",
+              "properties": {
+                "__brand": {
+                  "type": "string",
+                  "const": "AreasId"
+                }
+              },
+              "required": [
+                "__brand"
+              ]
+            },
+            {
+              "type": "string"
+            }
+          ]
+        },
+        "name": {
+          "type": "string"
+        },
+        "created_at": {
+          "type": "string",
+          "format": "date-time"
+        },
+        "updated_at": {
+          "type": "string",
+          "format": "date-time"
+        }
+      }
+    },
+    "CreateAreaRequest": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string"
+        }
+      },
+      "required": [
+        "name"
+      ]
+    },
+    "AreaResponse": {
+      "description": "Represents the table public.areas",
+      "type": "object",
+      "properties": {
+        "id": {
+          "description": "Identifier type for public.areas",
+          "allOf": [
+            {
+              "type": "object",
+              "properties": {
+                "__brand": {
+                  "type": "string",
+                  "const": "AreasId"
+                }
+              },
+              "required": [
+                "__brand"
+              ]
+            },
+            {
+              "type": "string"
+            }
+          ]
+        },
+        "name": {
+          "type": "string"
+        },
+        "created_at": {
+          "type": "string",
+          "format": "date-time"
+        },
+        "updated_at": {
+          "type": "string",
+          "format": "date-time"
+        }
+      },
+      "required": [
+        "created_at",
+        "id",
+        "name",
+        "updated_at"
+      ]
+    },
     "UserId": {
       "description": "Identifier type for public.users",
       "allOf": [
@@ -298,22 +528,7 @@
         "token"
       ]
     },
-    "CreateUserRequest": {
-      "type": "object",
-      "properties": {
-        "name": {
-          "type": "string"
-        },
-        "username": {
-          "type": "string"
-        }
-      },
-      "required": [
-        "name",
-        "username"
-      ]
-    },
-    "CreateUserResponse": {
+    "UserResponse": {
       "type": "object",
       "properties": {
         "id": {
@@ -357,6 +572,17 @@
         "name",
         "updated_at",
         "username"
+      ]
+    },
+    "UserJWTPayload": {
+      "type": "object",
+      "properties": {
+        "userId": {
+          "type": "string"
+        }
+      },
+      "required": [
+        "userId"
       ]
     }
   }
