# packages/api/src/types/schemas/area.ts
@@ -1,0 +1,5 @@
+import Area from "@/db/models/Area";
+
+export type CreateAreaRequest = { name: string };
+
+export type AreaResponse = Area;
